--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
+    "angular-plotly.js": "^0.1.15",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "plotly.js": "^1.42.5",
     "rxjs": "^6.3.3",
     "zone.js": "~0.8.26"
   },
