--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
+    "@tensorflow/tfjs": "^0.14.0",
     "@types/canvasjs": "^1.9.4",
     "angular-plotly.js": "^0.1.15",
     "bootstrap": "^4.1.3",
